# the-conductor-hermes

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  SOUL.md  config.example.yaml  pyproject.toml
conductor/: README.md  REMNANT_DATA_MODELS.md  REMNANT_MERGE_LOGIC.md  REMNANT_PROTOCOL.md  REMNANT_RESEARCH.md
conductor/workflows/: FABLE_AUDIT.md  FABLE_DEBUG.md  FABLE_EFFORT_ROUTING.md  FABLE_GATE.md  FABLE_MEMORY_CAPTURE.md  FABLE_SESSION_RESET.md  FABLE_VERIFY.md  README.md
crucible/: CRUCIBLE_RUNTIME.md  Dockerfile  WORKSPACE.md  requirements-crucible.txt
demos/stellar-codex/: CONDUCTOR_PLAN.json  PLAY.sh  README.md  index.html
docs/: ABOUT.md  ARCHITECTURE.md  BENCHMARKS.md  HARNESS.md  HERMES.md  HERMES_SUBAGENT_FANOUT.md  HISTORY.md  INTEGRATION.md  LESSONS.md  MCP.md  MODULE_FOR_AGENTS.md  OPERATORS.md  OPERATOR_FLOW.md  ORCHESTRATION.md  PILLARS.md  PILLAR_COMBOS.md  PROJECT_OVERVIEW.md  SHADOW_CLONES.md  SOUL_RESONANCE.md  WORKFLOWS.md
ethics/: ETHICS_CHECKLIST.md  NEURODIVERGENT_AI_ETHICS.md
governance/: FABLE_FRAMEWORK.md  GOVERNANCE_SAFETY_AUDIT.md  HEALING.md  MAX_EFFORT_DELIBERATION.md
hermes_plugin/conductor/: __init__.py  plugin.yaml
memory/: MEMORY_ARCHITECTURE.md  NOESIS.md
noesis/: SIMULATION_ALGORITHMS.md
scripts/: install.sh  install_for_hermes.sh  self_loop_study.py
src/conductor/: __init__.py  __main__.py  bootstrap.py  config.py  escalate_path.py  hermes_bridge.py  hermes_host.py  loop_policy.py  loop_thrash.py  paths.py  (+1 more)
tests/: conftest.py  test_benchmark_kit.py  test_bootstrap.py  test_brain_smoke.py  test_cli_module_entry.py  test_combos.py  test_each_pillar.py  test_harness_api.py  test_hermes_failure_detect.py  test_hermes_plugin_contract.py  test_loop_stop_messaging.py  test_mcp.py  test_orchestration.py  test_pillar_depth.py  test_pillars.py  test_plugin_skill_discovery.py  test_setup_ext.py  test_soul_resonance.py  test_spawn_compliance.py  test_wave_planner.py
tracks/: TRACK_SYSTEM.md
website/: CONDUCTOR_SECTIONS.json  README.md  index.html
(+131 files in other folders)
